[gd_scene load_steps=8 format=3 uid="uid://dx46p13fjj7mf"]

[ext_resource type="Script" path="res://scripts/game_over_panel.gd" id="1_yjtcy"]
[ext_resource type="FontFile" uid="uid://btj6n4lkyrvnh" path="res://assets/font/pixelated-loveNew.ttf" id="2_uci46"]
[ext_resource type="AudioStream" uid="uid://dowalyopba0hc" path="res://assets/audio/confirm.mp3" id="3_oo1wg"]
[ext_resource type="AudioStream" uid="uid://d4etm4j0q3elp" path="res://assets/audio/game_over.mp3" id="4_k1070"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmdrp"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_3de0y"]
base_font = ExtResource("2_uci46")

[sub_resource type="FontVariation" id="FontVariation_psu0k"]
base_font = ExtResource("2_uci46")

[node name="GameOverPanel" type="Panel"]
process_mode = 3
self_modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
z_index = 1
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fmdrp")
script = ExtResource("1_yjtcy")

[node name="MainMenuButton" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 478.0
offset_top = 337.0
offset_right = 667.0
offset_bottom = 386.0
theme_override_fonts/font = SubResource("FontVariation_3de0y")
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "MAIN MENU"

[node name="RestartButton" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 478.0
offset_top = 409.0
offset_right = 667.0
offset_bottom = 458.0
theme_override_fonts/font = ExtResource("2_uci46")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="GameOverText" type="Label" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 166.0
offset_right = 840.0
offset_bottom = 300.0
theme_override_fonts/font = SubResource("FontVariation_psu0k")
theme_override_font_sizes/font_size = 70
text = "Game Over!"
horizontal_alignment = 1

[node name="ConfirmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oo1wg")

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k1070")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
